Grace/tests/gibbs/errors/t013.grace
// ERROR = L0006
var brace := "{"
